refactor: remove redundant 'statistic' resource
