# src/resources/users/user.service.js
@@ -3,7 +3,6 @@ const bcrypt = require('bcrypt');
 const usersRepo = require('./user.db.repository');
 const tokenService = require('../token/token.service');
 const settingsService = require('../settings/setting.service');
-const statisticService = require('../statistics/statistic.service');
 const { AUTHENTICATION_ERROR } = require('../../errors/appErrors');
 
 const authenticate = async user => {
@@ -32,7 +31,6 @@ const save = user => usersRepo.save(user);
 const update = (id, user) => usersRepo.update(id, user);
 
 const remove = async id => {
-  await statisticService.remove(id);
   await settingsService.remove(id);
   await usersRepo.remove(id);
 };
